# another_serv

./: README.md  another_serv.core
rtl/: another_serv.v
sw/: CMakeLists.txt
sw/src/: bank.c  bank.h  main.c  parts.h  resource.c  resource.h  sys.h  sysImplementation.c  sysrv.c  video.c  video.h  vm.c  vm.h
tb/: another_serv_tb.cpp
